macro-template/tests/ui/err/duplicate_binding.stderr
error: the binding variable `#T` is declared more than once
 --> tests/ui/err/duplicate_binding.rs:4:19
  |
4 |     repeat!((#T, #T) in [(u8, u16)] {
  |                   ^

error: the first `#T` binding is here
 --> tests/ui/err/duplicate_binding.rs:4:15
  |
4 |     repeat!((#T, #T) in [(u8, u16)] {
  |               ^
